ignore htaccess, remove from stage, add htaccess-example

--- a/php/htaccess/test/.htaccess
+++ b/php/htaccess/test/.htaccess
@@ -1,4 +1,6 @@
 AuthType Basic
 AuthName 'Authorization...'
-AuthUserFile C:\projects\my\lab.zlatov.net\public_html\php\htaccess\.htpasswd
-Require valid-user
+AuthUserFile /home/iadfeshchm/projects/my/lab.zlatov.net/public_html/php/htaccess/test/.htpasswd
+#Require valid-user
+# or
+Require user test
