--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "http://zlatov.net",
   "dependencies": {
     "jquery": "^2.2.4",
-    "semantic": "semantic-ui#^2.2.7"
+    "semantic": "semantic-ui#^2.2.7",
+    "jstree": "^3.3.4"
   }
 }
