--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "semantic": "semantic-ui#^2.2.7",
     "jstree": "^3.3.4",
     "bootstrap": "3.3.7",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "vis": "^4.20.1"
   }
 }
