--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "jstree": "^3.3.4",
     "bootstrap": "3.3.7",
     "font-awesome": "^4.7.0",
-    "vis": "^4.20.1"
+    "vis": "^4.20.1",
+    "jquery-ui": "1.12.1"
   }
 }
