--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "bootstrap": "3.3.7",
     "font-awesome": "^4.7.0",
     "vis": "^4.20.1",
-    "jquery-ui": "1.12.1"
+    "jquery-ui": "1.12.1",
+    "underscore": "1.8.3"
   }
 }
