--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-    "require": {
-        "twbs/bootstrap": "3.3.7",
-        "FortAwesome/Font-Awesome": "*"
-    }
+  "require": {
+    "twbs/bootstrap": "3.3.7",
+    "FortAwesome/Font-Awesome": "*",
+    "phpunit/phpunit": "^4"
+  }
 }
