--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "font-awesome": "^4.7.0",
     "vis": "^4.20.1",
     "jquery-ui": "1.12.1",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "jquery_lazyload": "jquery.lazyload#^1.9.7"
   }
 }
