--- a/nginx/redirects/redirects.conf
+++ b/nginx/redirects/redirects.conf
@@ -16,6 +16,19 @@ server {
     return 301 $scheme://$host:8087/redirect_works.html;
   }
 
+  location = /oldpage.html {return 301 /newpage.html;}
+  location = /oldpage2.html {return 301 /newpage2.html;}
+  location = /oldpage3.html {return 301 /newpage3.html;}
+
+  if ($request_uri = /some.html?a=1) {return 301 /to.html;}
+
+  if ($http_referer ~* ^nginx.local) {
+    rewrite /production/11 /cat/1?a=$http_host&b=$http_referer permanent;
+  }
+  rewrite /production/11 /cat/1?a=her permanent;
+  rewrite /production/4 /cat/1?a=e permanent;
+  rewrite /production/5 /cat/1?a=$http_host permanent;
+
   location / {
     try_files $uri $uri/ =404;
   }
