--- a/theme/.htaccess
+++ b/theme/.htaccess
@@ -1,2 +1,11 @@
 #	Don't index this folder
 Options -Indexes
+
+php_flag log_errors off
+# php_value error_log /home/w/asdfasdfasdf/public_html/PHP_errors.log
+php_value log_errors_max_len 1024
+php_value error_reporting 32767
+php_flag display_errors on
+php_flag html_errors on
+php_flag ignore_repeated_errors on
+php_flag ignore_repeated_source on
