--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "php/_libs/tree"]
 	path = php/_libs/tree
 	url = https://github.com/Zlatov/tree.git
+[submodule "js/_libs/zlader"]
+	path = js/_libs/zlader
+	url = git@github.com:Zlatov/Zlader.git
