--- a/linux/system_setup/system_setup/apache/my.conf
+++ b/linux/system_setup/system_setup/apache/my.conf
@@ -131,3 +131,46 @@
 #     #ErrorLog ${APACHE_LOG_DIR}/error.log
 #     #CustomLog ${APACHE_LOG_DIR}/access.log combined
 # </VirtualHost>
+
+<VirtualHost *:80>
+    ServerName lorem-yii.local
+    ServerAlias www.lorem-yii.local
+    ServerAdmin admin@lorem-yii.local
+    DocumentRoot /home/iadfeshchm/projects/my/lorem_yii/frontend/web
+    <Directory /home/iadfeshchm/projects/my/lorem_yii/frontend/web>
+        Require all granted
+        Options Indexes FollowSymLinks Includes
+        AllowOverride All
+        Order deny,allow
+        Allow from all
+        <IfModule mod_rewrite.c>
+            RewriteEngine on
+            # RewriteBase / # RewriteBase выдаст ошибку при использовании в виртуальном хосте
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteRule . index.php
+        </IfModule>
+    </Directory>
+    ErrorLog /home/iadfeshchm/projects/my/lorem_yii/error.log
+    CustomLog /home/iadfeshchm/projects/my/lorem_yii/access.log combined
+    #ErrorLog ${APACHE_LOG_DIR}/error.log
+    #CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName admin.lorem-yii.local
+    ServerAlias www.admin.lorem-yii.local
+    ServerAdmin admin@lorem-yii.local
+    DocumentRoot /home/iadfeshchm/projects/my/lorem_yii/backend/web
+    <Directory /home/iadfeshchm/projects/my/lorem_yii/backend/web>
+        Require all granted
+        Options Indexes FollowSymLinks Includes
+        AllowOverride All
+        Order deny,allow
+        Allow from all
+    </Directory>
+    ErrorLog /home/iadfeshchm/projects/my/lorem_yii/error.log
+    CustomLog /home/iadfeshchm/projects/my/lorem_yii/access.log combined
+    #ErrorLog ${APACHE_LOG_DIR}/error.log
+    #CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
