--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bulma": "^0.7.1",
+    "ilorem": "^1.0.4",
     "jquery": "^3.3.1",
     "lazyload": "^2.0.0-beta.2",
     "vue": "^2.5.17",
