--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
     "FortAwesome/Font-Awesome": "*",
     "zlatov/resize-img": "^2",
     "zlatov/tree": "^1.2",
-    "twig/twig": "^1.35"
+    "twig/twig": "^1.35",
+    "doctrine/orm": "^2.5",
+    "doctrine/doctrine-bundle": "^1.10"
   }
 }
