--- a/linux/system_setup/system_setup/apache/my.conf
+++ b/linux/system_setup/system_setup/apache/my.conf
@@ -1,4 +1,27 @@
 
+<VirtualHost *:80>
+    DocumentRoot "/home/iadfeshchm/projects/my/lab"
+    ServerName lab.local
+    ServerAlias www.lab.local
+    <Directory "/home/iadfeshchm/projects/my/lab">
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride all
+        Order Deny,Allow
+        Allow from all
+        Require all granted
+    </Directory>
+    ErrorLog /home/iadfeshchm/projects/my/lab/error.log
+    CustomLog /home/iadfeshchm/projects/my/lab/access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName lorem_rails.local
+    ServerAlias www.lorem_rails.local
+    ProxyPreserveHost On
+    ProxyPass / http://localhost:48888/
+    ProxyPassReverse / http://localhost:48888/
+</VirtualHost>
+
 # <VirtualHost *:80>
 # 	DocumentRoot "/home/iadfeshchm/projects/my/tree_mysql"
 # 	ServerName tree_mysql.local
@@ -13,21 +36,6 @@
 # 	ErrorLog /home/iadfeshchm/projects/my/tree_mysql/error.log
 # 	CustomLog /home/iadfeshchm/projects/my/tree_mysql/access.log combined
 # </VirtualHost>
-
-<VirtualHost *:80>
-	DocumentRoot "/home/iadfeshchm/projects/my/lab"
-	ServerName lab.local
-	ServerAlias www.lab.local
-	<Directory "/home/iadfeshchm/projects/my/lab">
-		Options Indexes FollowSymLinks MultiViews
-		AllowOverride all
-		Order Deny,Allow
-		Allow from all
-		Require all granted
-	</Directory>
-	ErrorLog /home/iadfeshchm/projects/my/lab/error.log
-	CustomLog /home/iadfeshchm/projects/my/lab/access.log combined
-</VirtualHost>
 
 # <VirtualHost *:80>
 # 	DocumentRoot "/home/iadfeshchm/projects/my/anton"
