--- a/linux/system_setup/system_setup/apache/zenon.conf
+++ b/linux/system_setup/system_setup/apache/zenon.conf
@@ -4,6 +4,7 @@
     ServerName admin.zenonline.local
     ServerAlias www.admin.zenonline.local
     ProxyPreserveHost On
+    ProxyRequests Off
     ProxyPass / http://localhost:3002/
     ProxyPassReverse / http://localhost:3002/
 </VirtualHost>
