--- a/linux/system_setup/system_setup/apache/my.conf
+++ b/linux/system_setup/system_setup/apache/my.conf
@@ -3,7 +3,7 @@
 <VirtualHost *:80>
     DocumentRoot "/home/iadfeshchm/projects/my/lab"
     ServerName lab.local
-    ServerAlias www.lab.local
+    ServerAlias www.lab.local lab.zlatov www.lab.zlatov
     <Directory "/home/iadfeshchm/projects/my/lab">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride all
