--- a/linux/system_setup/system_setup/apache/zenon.conf
+++ b/linux/system_setup/system_setup/apache/zenon.conf
@@ -1,10 +1,120 @@
 # subl /etc/apache2/sites-available/zenon.conf
 
+# <VirtualHost *:80 *:443>
+#     DocumentRoot "/home/iadfeshchm/projects/zenon/heliex.ru"
+#     ServerName heliex.local
+#     ServerAlias www.heliex.local 10.192.1.36 127.0.0.1
+#     <Directory "/home/iadfeshchm/projects/zenon/heliex.ru">
+#         Options Indexes FollowSymLinks MultiViews
+#         AllowOverride all
+#         Order Deny,Allow
+#         Allow from all
+#         Require all granted
+#     </Directory>
+#     ErrorLog /home/iadfeshchm/projects/zenon/heliex.ru/error.log
+#     # SetEnv DB_HOST localhost
+#     # SetEnv DB_PORT 
+#     # SetEnv DB_FORUM signforum_new
+#     # SetEnv DB_FORUM forum
+#     # SetEnv DB_USER root
+#     # SetEnv DB_PASS 
+# </VirtualHost>
+# <VirtualHost *:80 *:443>
+#     DocumentRoot "/home/iadfeshchm/projects/zenon/heliex2.ru"
+#     ServerName heliex.ru
+#     ServerAlias www.heliex.ru 10.192.1.36 127.0.0.1
+#     <Directory "/home/iadfeshchm/projects/zenon/heliex2.ru">
+#         Options Indexes FollowSymLinks MultiViews
+#         AllowOverride all
+#         Order Deny,Allow
+#         Allow from all
+#         Require all granted
+#     </Directory>
+#     ErrorLog /home/iadfeshchm/projects/zenon/heliex2.ru/error.log
+#     SetEnv HELIEX_DATABASE heliex
+#     SetEnv HELIEX_USER root
+#     SetEnv HELIEX_PASSWORD 
+# </VirtualHost>
+
 <VirtualHost *:80>
     ServerName admin.zenonline.local
-    ServerAlias www.admin.zenonline.local
+    ServerAlias www.admin.zenonline.local www.admin.zenonline.zlatov admin.zenonline.zlatov
     ProxyPreserveHost On
-    ProxyRequests Off
     ProxyPass / http://localhost:3002/
     ProxyPassReverse / http://localhost:3002/
+    <Location />
+        AuthType Basic
+        AuthName 'Authorization...'
+        AuthUserFile /home/iadfeshchm/projects/zenon/admin/.htpasswd
+        Require valid-user
+    </Location>
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName admin.zenonline.stage
+    ServerAlias www.admin.zenonline.stage
+    ProxyPreserveHost On
+    ProxyPass / http://91.238.11.30:3002/
+    ProxyPassReverse / http://91.238.11.30:3002/
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName zenonline.local
+    ServerAlias www.zenonline.local zenonline.zlatov www.zenonline.zlatov
+    ProxyPreserveHost On
+    ProxyPass / http://localhost:3001/
+    ProxyPassReverse / http://localhost:3001/
+
+    <IfModule mod_rewrite.c>
+        RewriteEngine on
+        RewriteRule ^.htaccess$ - [F]
+        # RewriteCond %{REQUEST_URI} ^/admin/files/strict_color.*$
+        # RewriteRule ^(.*)$ http://zenonline.ru$1 [R=301,L]
+        RewriteCond %{REQUEST_URI} ^/admin/files/.*$
+        RewriteRule ^(.*)$ http://zenonline.ru$1 [R=301,L]
+    </IfModule>
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName zenonline.stage
+    ServerAlias www.zenonline.stage
+    ProxyPreserveHost On
+    ProxyPass / http://91.238.11.30:3001/
+    ProxyPassReverse / http://91.238.11.30:3001/
+
+    <IfModule mod_rewrite.c>
+        RewriteEngine on
+        RewriteRule ^.htaccess$ - [F]
+        # RewriteCond %{REQUEST_URI} ^/admin/files/strict_color.*$
+        # RewriteRule ^(.*)$ http://zenonline.ru$1 [R=301,L]
+        RewriteCond %{REQUEST_URI} ^/admin/files/.*$
+        RewriteRule ^(.*)$ http://zenonline.ru$1 [R=301,L]
+    </IfModule>
+</VirtualHost>
+
+<VirtualHost *:80 *:443>
+    DocumentRoot "/home/iadfeshchm/projects/zenon/sign-forum"
+    ServerName sign-forum.local
+    ServerAlias www.sign-forum.local www.sign-forum.zlatov sign-forum.zlatov
+    <Directory "/home/iadfeshchm/projects/zenon/sign-forum">
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride all
+        Order Deny,Allow
+        Allow from all
+        Require all granted
+    </Directory>
+    ErrorLog /home/iadfeshchm/projects/zenon/sign-forum/error.log
+    SetEnv DB_HOST localhost
+    SetEnv DB_PORT 3306
+    SetEnv DB_FORUM forum
+    SetEnv DB_USER root
+    SetEnv DB_PASS 
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName mailcatcher.local
+    ServerAlias www.mailcatcher.local mailcatcher.zlatov www.mailcatcher.zlatov
+    ProxyPreserveHost On
+    ProxyPass / http://127.0.0.1:1080/
+    ProxyPassReverse / http://127.0.0.1:1080/
 </VirtualHost>
