--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bulma": "^0.7.1",
     "ilorem": "^1.0.5",
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
     "lazyload": "^2.0.0-beta.2",
     "semantic-ui": "^2.2.13",
     "underscore": "^1.9.1",
