--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery-ui": "^1.12.1",
     "lazyload": "^2.0.0-beta.2",
     "semantic-ui": "^2.2.13",
+    "systemjs": "^3.1.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
