--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "jquery-ui": "^1.12.1",
     "lazyload": "^2.0.0-beta.2",
     "semantic-ui": "^2.2.13",
-    "systemjs": "^3.1.0",
+    "systemjs": "^0.20.12",
+    "systemjs-plugin-babel": "^0.0.21",
+    "systemjs-plugin-css": "^0.1.33",
     "underscore": "^1.9.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
