--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bulma": "^0.7.1",
+    "font-awesome": "^4.7.0",
     "ilorem": "^1.0.5",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
