--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "lazyload": "^2.0.0-beta.2",
+    "normalize.css": "^8.0.1",
     "semantic-ui": "^2.2.13",
     "semantic-ui-css": "^2.2.12",
     "systemjs": "^0.20.12",
