--- a/js/_tasks/fancybox/package.json
+++ b/js/_tasks/fancybox/package.json
@@ -4,13 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "jquery": "^3.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
-    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
