--- a/nginx/proxy/proxy.conf
+++ b/nginx/proxy/proxy.conf
@@ -4,6 +4,7 @@ server {
     client_max_body_size 256m;
     location / {
         proxy_pass http://127.0.0.1:48888;
+        # proxy_pass http://unix:/home/iadfeshchm/projects/zenon/zenonline/tmp/sockets/puma.sock:/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $remote_addr;
         port_in_redirect off;
