--- a/nginx/redirects/redirects.conf
+++ b/nginx/redirects/redirects.conf
@@ -36,3 +36,10 @@ server {
     return 404;
   }
 }
+
+# С http на https.
+server {
+    listen 91.238.11.30:80;
+    server_name zenonline.ru *.zenonline.ru ;
+    rewrite ^ https://zenonline.ru$request_uri? permanent;
+}
