--- a/docker/_tasks/zenonline/Dockerfile
+++ b/docker/_tasks/zenonline/Dockerfile
@@ -10,6 +10,13 @@ RUN dpkg-reconfigure --frontend noninteractive locales
 
 RUN apt-get -qq update && apt-get -qq dist-upgrade && apt-get install -qq -y --no-install-recommends \
   git \
+  ca-certificates \
+  build-essential \
+  libssl-dev \
+  libreadline-dev \
+  zlib1g-dev \
+  libpq-dev \
+  curl \
   mc \
   htop
 
@@ -17,17 +24,30 @@ RUN	alias mc='LANG=ru_RU.UTF-8 mc'
 
 RUN	apt-get install postgresql -y
 
+RUN git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+RUN cd ~/.rbenv && src/configure && make -C src
+
+RUN echo 'eval "$(rbenv init -)"\n'"$(cat ~/.bashrc)" > ~/.bashrc
+RUN echo 'export PATH="$HOME/.rbenv/bin:$PATH"\n'"$(cat ~/.bashrc)" > ~/.bashrc
+
+RUN mkdir -p /root/.rbenv/plugins
+RUN git clone https://github.com/rbenv/ruby-build.git /root/.rbenv/plugins/ruby-build
+
+RUN /root/.rbenv/bin/rbenv install 2.6.5
+RUN /root/.rbenv/bin/rbenv global 2.6.5
+RUN /root/.rbenv/shims/gem install bundler -v 2.1.4
+
 # RUN	apt install systemd
 # RUN	systemctl
 
 ENTRYPOINT service postgresql start && bash
-# ENTRYPOINT ["/usr/sbin/service", "postgresql", "restart", "&&", "/bin/bash"]
+
+
 
 
 # docker volume create zenonline_postgresql
-
 # docker rm zenonline
-# docker run --name zenonline -itd -p 9432:5432 -v zenonline_dockerfile_postgresql:/var/lib/postgresql/10/main/base zenoweb/zenonline:dockerfile
+# docker run --name zenonline -it zenoweb/zenonline:dockerfile
+# docker run --name zenonline -itd -p 9432:5432 -v $(pwd):/app/zenonline -v zenonline_dockerfile_postgresql:/var/lib/postgresql/10/main/base zenoweb/zenonline:dockerfile
 # docker attach zenonline
-# service postgresql status
 # docker push zenoweb/zenonline:dockerfile
