--- a/nginx/proxy/proxy.conf
+++ b/nginx/proxy/proxy.conf
@@ -1,3 +1,4 @@
+# simple
 server {
     listen 127.0.0.1:80;
     server_name site.domain www.site.domain;
@@ -11,5 +12,69 @@ server {
         proxy_connect_timeout 600;
         proxy_read_timeout 600;
         fastcgi_read_timeout 600s;
+    }
+}
+
+
+
+# Developer, unix socket and port
+upstream newzenonline {
+    zone zone_for_backends 1m;
+    server unix:/home/iadfeshchm/projects/zenon/zenonline/tmp/sockets/puma.sock;
+    server 127.0.0.1:3000;
+}
+
+server {
+    listen 127.0.0.1:80;
+    server_name newzenonline.local;
+    client_max_body_size 256m;
+    location / {
+        #proxy_pass http://unix:/home/iadfeshchm/projects/zenon/zenonline/tmp/sockets/puma.sock:/;
+        proxy_pass http://newzenonline;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_connect_timeout 600;
+        proxy_read_timeout 600;
+        fastcgi_read_timeout 600s;
+    }
+}
+
+# Staging, SSL + Proto header, unix socket, logs, root, redirect to https
+upstream newzenonline_zlatov_stage {
+   server unix:/home/zlatov/app/zenonline/current/tmp/sockets/puma.sock fail_timeout=0;
+}
+
+server {
+    listen 91.238.11.30:80;
+    server_name newzenonline-zlatov-stage.klej.ru;
+    rewrite ^ https://newzenonline-zlatov-stage.klej.ru$request_uri? permanent;
+}
+
+server {
+    listen 91.238.11.30:443 ssl;
+    ssl_certificate /etc/letsencrypt/live/newzenonline-zlatov-stage.klej.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/newzenonline-zlatov-stage.klej.ru/privkey.pem;
+    root /home/zlatov/app/zenonline/current/public;
+    server_name newzenonline-zlatov-stage.klej.ru;
+    index index.htm index.html;
+    access_log /var/log/nginx/newzenonline_zlatov_stage_log.access.log;
+    error_log /var/log/nginx/newzenonline_zlatov_stage_err.error.log;
+    client_max_body_size 4G;
+    keepalive_timeout 5;
+    error_page 500 502 503 504 /500.html;
+    location / {
+      try_files $uri @app;
+    }
+    location @app {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_redirect off;
+      proxy_buffering off;
+      proxy_set_header        Host            $host;
+      proxy_set_header        X-Real-IP       $remote_addr;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_pass http://newzenonline_zlatov_stage;
     }
 }
