--- a/nginx/_tasks/lab/lab.local.conf
+++ b/nginx/_tasks/lab/lab.local.conf
@@ -5,10 +5,6 @@ server {
     root /home/iadfeshchm/projects/my/lab;
     index index.php index.html index.htm;
 
-    types {
-        text/plain  md;
-    }
-
     location / {
         try_files $uri $uri/ =404;
     }
@@ -20,6 +16,12 @@ server {
 
     location ~ /\.ht {
         deny all;
+    }
+
+    location ~* \.md$ {
+        types {
+            text/plain md;
+        }
     }
 }
 
