--- a/jstree/redraw/package.json
+++ b/jstree/redraw/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "ilorem": "^1.1.2",
     "jquery": "^2",
     "jstree": "^3.3.9"
   }
