--- a/nginx/_tasks/lab/lab.local.conf
+++ b/nginx/_tasks/lab/lab.local.conf
@@ -1,3 +1,19 @@
+# Выполнить.
+# cd && mkcert lab.local
+# sudo su
+# cp /home/iadfeshchm/lab.local.pem /etc/ssl/certs/
+# cp /home/iadfeshchm/lab.local-key.pem /etc/ssl/private/
+# touch /etc/nginx/sites-available/lab.local.conf
+# cat /home/iadfeshchm/projects/my/lab/nginx/_tasks/lab/lab.local.conf > /etc/nginx/sites-available/lab.local.conf
+# ln -s ../sites-available/lab.local.conf /etc/nginx/sites-enabled/lab.local.conf
+# nginx -t && nginx -s reload
+# systemctl restart nginx
+
+# without www
+server {
+    server_name www.lab.local;
+    return 301 $scheme://lab.local$request_uri;
+}
 # HTTP
 server {
     listen 127.0.0.1:80;
@@ -27,18 +43,13 @@ server {
 
 # HTTPS
 server {
-    listen 127.0.0.1:8080;
     listen 127.0.0.1:443 ssl;
     ssl on;
-    ssl_certificate /etc/nginx/ssl/my/lab/lab.local.crt;
-    ssl_certificate_key /etc/nginx/ssl/my/lab/device.key;
+    ssl_certificate /etc/ssl/certs/lab.local.pem;
+    ssl_certificate_key /etc/ssl/private/lab.local-key.pem;
     server_name lab.local www.lab.local;
     root /home/iadfeshchm/projects/my/lab;
     index index.php index.html index.htm;
-
-    types {
-        text/plain  md;
-    }
 
     location / {
         try_files $uri $uri/ =404;
@@ -51,5 +62,11 @@ server {
 
     location ~ /\.ht {
         deny all;
+    }
+
+    location ~* \.md$ {
+        types {
+            text/plain md;
+        }
     }
 }
