--- a/nginx/proxy/proxy.conf
+++ b/nginx/proxy/proxy.conf
@@ -1,3 +1,7 @@
+# Документация настроек проксирования можно найти в разделе документации
+# посвещённой модулю nginx ngx_http_proxy_module.
+# Базовые настройки в базовом модуле nginx ngx_http_core_module.
+
 # 
 # simple
 # 
@@ -10,11 +14,17 @@ server {
         proxy_pass http://127.0.0.1:48888;
         # proxy_pass http://unix:/home/iadfeshchm/projects/zenon/zenonline/tmp/sockets/puma.sock:/;
         proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        port_in_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
         proxy_connect_timeout 600;
         proxy_read_timeout 600;
-        fastcgi_read_timeout 600s;
+
+        port_in_redirect off;
+        proxy_redirect off;
+        proxy_buffering off;
     }
 }
 
