--- a/nginx/server/server.conf
+++ b/nginx/server/server.conf
@@ -1,3 +1,25 @@
+# Для заглушки
+upstream shopstream {
+    server 127.0.0.1:3001;
+    server 127.0.0.1:81 backup;
+}
+server {
+    listen *:81;
+    error_page 503 /update_in_progress.html;
+    location = /favicon.ico {
+        root /home/deployer/app/market/public;
+    }
+    location = /update_in_progress.gif {
+        root /home/deployer/app/market/public;
+    }
+    location = /update_in_progress.html {
+        root /home/deployer/app/market/public;
+    }
+    location / {
+        return 503;
+    }
+}
+
 # without www
 server {
     server_name www.domain.local;
