--- a/nginx/server/server.conf
+++ b/nginx/server/server.conf
@@ -36,8 +36,13 @@ server {
         try_files $uri $uri/ =404;
     }
 
+    # Перенаправление запросов к php-файлам на php-fpm сервис.
     location ~ \.php$ {
+        # Для работы "перенаправления" необходимо включить конфигурацию
+        # протокола fastcgi (обчно присутствует в дистрибутиве в
+        # /etc/nginx/fastcgi.conf).
         include snippets/fastcgi-php.conf;
+        # Путь к сокет-файлу php-fpm (можно и через порт).
         fastcgi_pass unix:/run/php/php5.6-fpm.sock;
     }
 
