--- a/nginx/server/basic_auth.conf
+++ b/nginx/server/basic_auth.conf
@@ -1,6 +1,7 @@
 # sudo apt install -y apache2-utils
 # sudo yum install -y httpd-tools
 # htpasswd -c /etc/nginx/.htpasswd admin
+# htpasswd -c "$(pwd)/.htpasswd" admin
 server {
     listen 80;
     server_name domain.local;
