--- a/jquery/_tasks/jquery_ui_tooltip/package.json
+++ b/jquery/_tasks/jquery_ui_tooltip/package.json
@@ -26,6 +26,7 @@
     "holderjs": "^2.9.7",
     "ilorem": "^1.2.0",
     "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
     "popper.js": "^1.16.1"
   }
 }
