--- a/nginx/redirects/redirects.conf
+++ b/nginx/redirects/redirects.conf
@@ -39,7 +39,18 @@ server {
 
 # С http на https.
 server {
-    listen 91.238.11.30:80;
-    server_name zenonline.ru *.zenonline.ru ;
-    rewrite ^ https://zenonline.ru$request_uri? permanent;
+  listen 91.238.11.30:80;
+  server_name zenonline.ru *.zenonline.ru ;
+  rewrite ^ https://zenonline.ru$request_uri? permanent;
+}
+
+# without www
+server {
+  server_name www.domain.local;
+  return 301 $scheme://domain.local$request_uri;
+}
+# with www
+server {
+  server_name domain.local;
+  return 301 $scheme://www.domain.local$request_uri;
 }
