--- a/nginx/server/server.conf
+++ b/nginx/server/server.conf
@@ -25,6 +25,11 @@ server {
     server_name www.domain.local;
     return 301 $scheme://domain.local$request_uri;
 }
+# with www
+server {
+    server_name domain.local;
+    return 301 $scheme://www.domain.local$request_uri;
+}
 # HTTP
 server {
     listen 127.0.0.1:80;
