--- a/nginx/_tasks/lab/lab.local.conf
+++ b/nginx/_tasks/lab/lab.local.conf
@@ -45,7 +45,7 @@ server {
 # HTTPS
 server {
     listen 127.0.0.1:443 ssl;
-    ssl on;
+    # ssl on;
     ssl_certificate /etc/ssl/certs/lab.local.pem;
     ssl_certificate_key /etc/ssl/private/lab.local-key.pem;
     server_name lab.local www.lab.local;
