--- a/nginx/server/basic_auth.conf
+++ b/nginx/server/basic_auth.conf
@@ -1,7 +1,13 @@
+# Установка утилиты htpasswd
 # sudo apt install -y apache2-utils
 # sudo yum install -y httpd-tools
+# 
+# Добавить пользователя
+# htpasswd /etc/nginx/.htpasswd admin
+# htpasswd "$(pwd)/.htpasswd" admin
+# 
+# Перезаписать файл удалив других пользователей (-c)
 # htpasswd -c /etc/nginx/.htpasswd admin
-# htpasswd -c "$(pwd)/.htpasswd" admin
 server {
     listen 80;
     server_name domain.local;
