--- a/js/_tasks/game/package.json
+++ b/js/_tasks/game/package.json
@@ -3,7 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "npx webpack --node-env production",
+    "development": "npx webpack-dev-server --node-env development --open"
+  },
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^7.0.1",
+    "postcss-loader": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
