--- a/nginx/_tasks/lab/lab.local.conf
+++ b/nginx/_tasks/lab/lab.local.conf
@@ -21,6 +21,7 @@ server {
     server_name lab.local;
     root /home/iadfeshchm/projects/my/lab;
     index index.php index.html index.htm;
+    charset UTF-8;
 
     location / {
         try_files $uri $uri/ =404;
@@ -51,6 +52,7 @@ server {
     server_name lab.local www.lab.local;
     root /home/iadfeshchm/projects/my/lab;
     index index.php index.html index.htm;
+    charset UTF-8;
 
     location / {
         try_files $uri $uri/ =404;
