--- a/package.json
+++ b/package.json
@@ -1,39 +1,8 @@
 {
   "dependencies": {
-    "bulma": "^0.7.1",
     "font-awesome": "^4.7.0",
-    "ilorem": "^1.0.5",
-    "jquery": "^3.3.1",
-    "jquery-ui": "^1.12.1",
-    "lazyload": "^2.0.0-beta.2",
-    "normalize.css": "^8.0.1",
-    "semantic-ui-css": "^2.2.12",
-    "systemjs": "^0.20.12",
-    "systemjs-plugin-babel": "^0.0.21",
-    "systemjs-plugin-css": "^0.1.33",
-    "underscore": "^1.9.1",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.2",
-    "vue-yandex-maps": "^0.7.15",
-    "zlader": "^1.1.3"
-  },
-  "scripts-example": {
-    "scss": "node-sass --watch sass/_task/market_lorem/sass/style.scss -o sass/_task/market_lorem/temp_css"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.10",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
-    "file-loader": "^6.2.0",
-    "less": "^3.10.3",
-    "mini-css-extract-plugin": "^1.3.2",
-    "node-sass": "^5.0.0",
-    "postcss-loader": "^4.1.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^3.3.0"
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.1",
+    "underscore": "^1.13.7"
   }
 }
