--- a/nginx/_tasks/lab/lab.local.conf
+++ b/nginx/_tasks/lab/lab.local.conf
@@ -11,7 +11,7 @@
 
 # without www
 server {
-    listen 80;
+    listen 127.0.0.1:80;
     server_name www.lab.local;
     return 301 $scheme://lab.local$request_uri;
 }
@@ -37,9 +37,8 @@ server {
     }
 
     location ~* \.md$ {
-        types {
-            text/plain md;
-        }
+        add_header Content-Type "text/markdown; charset=utf-8";
+        try_files $uri =404;
     }
 }
 
